--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
     "name": "click-that-art",
     "version": "0.0.1",
     "dependencies": {
-        "express": "3.3.x"
+        "express": "3.3.x",
+        "xml2js": "0.2.x"
     },
     "engines": {
+        "node": "0.10.x",
+        "npm": "1.3.x"
     }
 }
